@@ -74,7 +74,6 @@ class WikiAnalyzer:
     token_re = re.compile(
         r"(?P<company>\w+[&@]\w+)|" + # company names like AT&T and Excite@Home.
         r"(?P<email>\w+([.-]\w+)*@\w+([.-]\w+)*)|" +    # email addresses
-        r"(?P<hostname>\w+(\.\w+)+)|" +                 # hostnames
         r"(?P<acronym>(\w\.)+)|" +          # acronyms: U.S.A., I.B.M., etc.
         r"(?P<word>\w+)",                   # words (including WikiWords)
         re.U)
@@ -137,11 +136,6 @@ class WikiAnalyzer:
                         if word:
                             yield (word, m.start() + displ)
                             displ += len(word) + 1
-                elif m.group("hostname"):
-                    displ = 0
-                    for word in self.dot_re.split(m.group("hostname")):
-                        yield (word, m.start() + displ)
-                        displ += len(word) + 1
                 elif m.group("word"):
                     for word, pos in self.raw_tokenize_word(m.group("word"), m.start()):
                         yield word, pos
