@@ -43,6 +43,8 @@ Version 1.7.current:
       those directories for a while just for the case.
     * Standalone server: fix --pidfile option
     * Search:
+      * Xapian indexing: Removed crappy "hostname" tokenization.
+        Fixes MoinMoinBugs/1.7 XapianNotWorkingWithLeadingNumbersInTitle.
       * Make query parser reject more invalid input.
       * If query parsing raises a BracketError, at least tell what the problem
         is (and not just raise empty  ValueError).
